fix horizontal scroll

--- a/code/react-src/src/App.css
+++ b/code/react-src/src/App.css
@@ -1,7 +1,8 @@
 .App {
-    width: 100vw;
+    width: 99vw;
     margin-top: 4vh;
-
+    overflow-x: none;
+    margin-bottom: -2vh;
 }
 html {
     min-height: 100vh;
